--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
+.todo{
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.todo-wrapper{
+  margin:40px auto 20px auto;
+  min-height: 375px;
+  padding: 20px;
+  width: 400px;
+  border: 5px solid rgba(73, 204, 249, 1.0); 
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input{
+width: 60%;
+border: none;
+margin-right: 10px;
+padding: 5px;
+line-height: 17px;
+border-top:2px solid rgba(73, 204, 249, 1.0); 
+border-bottom:2px solid rgba(73, 204, 249, 1.0); 
+
+}
+input:focus{
+  border: none;
+  outline: none;
+  border-top:2px solid rgba(73, 204, 249, 1.0); 
+  border-bottom:2px solid rgba(73, 204, 249, 1.0); 
+
+}
+.btn {
+  outline: none;
+  box-shadow: none;
+  border-width: 2px;
+  border-radius: 3px;
+  border-style:solid;
+  padding: 8px;
+
+}
+.btn-primary{
+  color: rgba(73, 204, 249, 1.0); 
+  border-color: rgba(73, 204, 249, 1.0); 
+  background-color: transparent;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.todowrapper{
+  border-bottom:1px solid #efefef; 
+  text-align: left;
+  margin-bottom:10px; 
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ul{
+  text-align: left;
 }
